--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=transito-api
+spring.datasource.url=jdbc:mysql://localhost:3306/transitbase?createDatabaseIfNotExist=true&aserverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
